# OpenCV_hero

./: .gitignore  CMakeLists.txt  README.md  example.py  main.cpp  railway.py  test_akaze.py
controller/: cStream.cpp  cStream.h
core/: FrameManager.cpp  FrameManager.h
model/: Symbol.cpp  Symbol.h
music/: MusicManager.cpp  MusicManager.h
tests/: AnimalTrackerTest.py  test_akaze.py  test_filter2D.py
tracker/: AOITracker.py  AnimalTracker.py  Launcher.py  Main.py  Point.py  Window.py  __init__.py
util/: ImgUtil.cpp  ImgUtil.h  cStream.cpp  cStream.h  videoWriter.cpp  videoWriter.h
